--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1", 
-    "start": "npm run build && node dist/app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build && node dist/app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
     "nodemon": "^2.0.15",
@@ -19,7 +20,13 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
+    "body-parser": "^1.19.2",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "http": "^0.0.1-security",
+    "peer": "^0.6.1",
+    "socket.io": "^4.4.1",
+    "uuid": "^8.3.2"
   }
 }
