--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
