--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "express": "^4.17.3",
     "http": "^0.0.1-security",
     "peer": "^0.6.1",
+    "peerjs": "^1.3.2",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
   }
