--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.ts",
+    "build": "npm run lint && rimraf dist/ && tsc",
+    "start": "npm run build && node dist/app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npm run build && node dist/app.js"
+    "lint": "eslint src/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +18,14 @@
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
+    "@types/uuid": "^8.3.4",
+    "@typescript-eslint/eslint-plugin": "^5.17.0",
+    "@typescript-eslint/parser": "^5.17.0",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "nodemon": "^2.0.15",
+    "prettier": "^2.6.1",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
@@ -28,6 +37,7 @@
     "http": "^0.0.1-security",
     "peer": "^0.6.1",
     "peerjs": "^1.3.2",
+    "rimraf": "^3.0.2",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
   }
