--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 
 {
-    "singleQuote": true,
+    "singleQuote": false,
     "trailingComma": "all",
     "arrowParens": "always",
     "tabWidth": 2,
