--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "video-conferencing-app",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "A video conferencing app used to make video calls and chat.",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon src/app.ts",
     "build": "npm run lint && rimraf dist/ && tsc",
@@ -13,6 +13,10 @@
   "keywords": ["video app", "chat app", "video conference", "socket"],
   "author": "Boluwatife Omosowon",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/bolu-tife/google-meet-clone.git"
+  },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/ejs": "^3.1.0",
