--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint src/**/*.ts"
   },
-  "keywords": ["video app", "chat app", "video conference", "socket"],
+  "keywords": [
+    "video app",
+    "chat app",
+    "video conference",
+    "socket"
+  ],
   "author": "Boluwatife Omosowon",
   "license": "ISC",
   "repository": {
@@ -38,6 +43,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
+    "helmet": "^5.0.2",
     "http": "^0.0.1-security",
     "peer": "^0.6.1",
     "peerjs": "^1.3.2",
