--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/app.ts",
     "build": "npm run lint && rimraf dist/ && tsc",
     "start": "npm run build && node dist/app.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --reporter spec",
     "lint": "eslint src/**/*.ts"
   },
   "keywords": [
@@ -40,12 +40,15 @@
   },
   "dependencies": {
     "body-parser": "^1.19.2",
+    "chai": "^4.3.6",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
     "http": "^0.0.1-security",
+    "mocha": "^10.0.0",
     "peer": "^0.6.1",
     "peerjs": "^1.3.2",
+    "request": "^2.88.2",
     "rimraf": "^3.0.2",
     "socket.io": "^4.4.1",
     "uuid": "^8.3.2"
