--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -28,4 +28,10 @@ jobs:
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
-    - run: node dist/app.js && npm test
+
+    - name: Install Dependencies
+              run: npm install
+
+            - name: API testing
+              run: npm run test
+
