--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/app.ts",
     "build": "npm run lint && rimraf dist/ && tsc",
     "start": "npm run build && node dist/app.js",
-    "test": "mocha --reporter spec",
+    "test": "node dist/app.js & mocha --timeout 10000 --exit",
     "lint": "eslint src/**/*.ts"
   },
   "keywords": [
@@ -41,6 +41,7 @@
   "dependencies": {
     "body-parser": "^1.19.2",
     "chai": "^4.3.6",
+    "concurrently": "^7.1.0",
     "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.3",
